<resources>
    <string name="app_name">pss9fp</string>
    <string name="temp_item_name">Temp Item Name</string>
    <string name="checkbox">CheckBox</string>
    <string name="add_item">Add a bucket list item</string>
    <string name="bucket_list_item">Bucket List Item</string>
    <string name="due_date">due date</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="completion_date">completion date</string>
    <string name="press_to_set_due_date">Press to Set Due Date</string>
    <string name="delete">DELETE</string>
</resources>